--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
   <div class="min-h-screen flex flex-col flex-auto flex-shrink-0 antialiased bg-white">
-  <div *ngIf="authService.isAuthenticate">
+  <div *ngIf="auth.Islogin()">
     <app-navbar></app-navbar>
   </div>
   <div>
