--- a/src/app/components/statments/statments.component.html
+++ b/src/app/components/statments/statments.component.html
@@ -1,51 +1,173 @@
 <div class="h-full mt-14 mb-10 md:mr-48 mr-14">
-      <h1 class="text-bold text-center text-3xl">جميع الكشوفات</h1>
-<div class="mt-4 mx-4">
-  <div class="w-full overflow-hidden rounded-lg shadow-xs">
-    <div class="w-full overflow-x-auto">
-      <table class="w-full divide-y">
-        <thead>
-          <tr
-            class="text-sm font-semibold tracking-wide text-center text-white uppercase border-b bg-[#f97316]"
-          >
-            <th>id </th>
-            <th>التاريخ</th>
-            <th>رمز المصرف</th>
-            <th>رمز الموقع</th>
-            <th>تم انشاؤه </th>
-            <th>تم التعديل عليه</th>
-            <th>فعال ام لا  </th>
-          </tr>
-        </thead>
-        <tbody *ngFor="let cat of all2" class="bg-gray-50 divide-y">
-          <tr class="hover:bg-gray-100 text-center">
-            <td>
-              {{ cat.id }}
-            </td>
-            <td>
-              {{ cat.workingdate | date:'medium' }}
-            </td>
-            <td>
-              {{ cat.Bank.name }}
-            </td>
-            <td>
-              {{ cat.Site.name }}
-            </td>
-            <td>
-              {{ cat.createdAt | date:'medium'}}
-            </td>
-            <td>
-              {{ cat.updatedAt | date:'medium' }}
-            </td>
-            <td>
-              {{ cat.isActive }}
-            </td>
-          </tr>
-        </tbody>
-      </table>
+  <h1 class="text-bold text-center text-3xl">جميع الكشوفات</h1>
+  <div class="mt-4 mx-4">
+    <div class="w-full overflow-hidden rounded-lg shadow-xs">
+      <div class="w-full overflow-x-auto">
+        <table class="w-full divide-y">
+          <thead>
+            <tr class="text-sm font-semibold tracking-wide text-center text-white uppercase border-b bg-[#f97316]">
+              <th>id </th>
+              <th>التاريخ</th>
+              <th> المصرف</th>
+              <th> الموقع</th>
+              <th> الاجراء </th>
+            </tr>
+          </thead>
+          <tbody *ngFor="let cat of all2" class="bg-gray-50 divide-y">
+            <tr class="hover:bg-gray-100 text-center">
+              <td>
+                {{ cat.id }}
+              </td>
+              <td>
+                {{ cat.Statement.length }}
+              </td>
+              <td>
+                {{ cat.Bank.name }}
+              </td>
+              <td>
+                {{ cat.Site.name }}
+              </td>
+              <td>
+                <a (click)="openXl(longContent)"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                    class="mr-" xmlns:xlink="http://www.w3.org/1999/xlink" id="Layer_1"
+                    style="enable-background:new 0 0 64 64;" version="1.1" viewBox="0 0 64 64" xml:space="preserve">
+                    <style type="text/css">
+                      .st0 {
+                        fill: #134563;
+                      }
+                    </style>
+                    <g>
+                      <g id="Icon-Eye" transform="translate(278.000000, 484.000000)">
+                        <path class="st0"
+                          d="M-246-436.6c-16.2,0-23.5-14.3-23.8-14.9c-0.2-0.4-0.2-0.8,0-1.2c0.3-0.6,7.6-14.9,23.8-14.9     s23.5,14.3,23.8,14.9c0.2,0.4,0.2,0.8,0,1.2C-222.5-450.8-229.8-436.6-246-436.6L-246-436.6z M-267.1-452     c1.5,2.6,8.4,12.8,21.1,12.8c12.7,0,19.6-10.2,21.1-12.8c-1.5-2.6-8.4-12.8-21.1-12.8C-258.7-464.8-265.6-454.6-267.1-452     L-267.1-452z"
+                          id="Fill-174" />
+                        <path class="st0"
+                          d="M-246-439.4c-7,0-12.6-5.7-12.6-12.6s5.7-12.6,12.6-12.6s12.6,5.7,12.6,12.6     S-239-439.4-246-439.4L-246-439.4z M-246-462c-5.5,0-10,4.5-10,10s4.5,10,10,10s10-4.5,10-10S-240.5-462-246-462L-246-462z"
+                          id="Fill-175" />
+                        <path class="st0"
+                          d="M-246-445c-3.8,0-7-3.1-7-7c0-0.7,0.6-1.3,1.3-1.3c0.7,0,1.3,0.6,1.3,1.3     c0,2.4,1.9,4.3,4.3,4.3s4.3-1.9,4.3-4.3s-1.9-4.3-4.3-4.3c-0.7,0-1.3-0.6-1.3-1.3c0-0.7,0.6-1.3,1.3-1.3c3.8,0,7,3.1,7,7     S-242.2-445-246-445"
+                          id="Fill-176" />
+                      </g>
+                    </g>
+                  </svg></a>
+              </td>
+              <ng-template #longContent let-modal>
+
+                <div
+                  class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none justify-center items-center flex text-center bg-blue-100 bg-opacity-25">
+                  <div class="relative mx-auto">
+                    <div
+                      class="border-0 rounded-lg shadow-lg flex flex-col bg-white outline-none focus:outline-none p-3">
+                      <svg xmlns="http://www.w3.org/2000/svg" height="24" class="cursour-pointer"
+                        (click)="modal.dismiss('Cross click')" width="24" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        enable-background="new 0 0 512 512" id="Layer_1" version="1.1" viewBox="0 0 512 512"
+                        xml:space="preserve">
+                        <linearGradient gradientUnits="userSpaceOnUse" id="SVGID_1_" x1="256" x2="256" y1="512"
+                          y2="-9.094947e-013">
+                          <stop offset="0" style="stop-color: #e73827" />
+                          <stop offset="1" style="stop-color: #f85032" />
+                        </linearGradient>
+                        <circle cx="256" cy="256" fill="url(#SVGID_1_)" r="256" />
+                        <path
+                          d="M268.7,256l119.6-119.6c3.2-3.2,3.2-8.3,0-11.4c-3.2-3.2-8.3-3.2-11.4,0L257.2,244.6L135.1,122.5  c-3.2-3.2-8.3-3.2-11.4,0c-3.2,3.2-3.2,8.3,0,11.4L245.8,256L123.7,378.1c-3.2,3.2-3.2,8.3,0,11.4c1.6,1.6,3.7,2.4,5.7,2.4  c2.1,0,4.1-0.8,5.7-2.4l122.1-122.1l119.6,119.6c1.6,1.6,3.7,2.4,5.7,2.4c2.1,0,4.1-0.8,5.7-2.4c3.2-3.2,3.2-8.3,0-11.4L268.7,256z"
+                          fill="#FFFFFF" />
+                      </svg>
+                      <div class="px-4 sm:px-6 lg:px-8" id="invoice" #invoice>
+                        <div class="mx-auto">
+                          <div class="text-xs">
+                            <div class="-my-2  sm:-mx-6 lg:-mx-8">
+                              <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+                                <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+                                  <table class="divide-y divide-gray-200">
+                                    <thead class="bg-[#1e3a8a]">
+                                      <tr>
+                                        <th scope="col"
+                                          class="px-6 py-3 text-center text-xs font-medium text-white uppercase tracking-wider">
+                                          الفئة</th>
+                                        <th scope="col"
+                                          class="px-6 py-3 text-center text-xs font-medium text-white uppercase tracking-wider">
+                                          تاريخ الايداع</th>
+                                        <th scope="col"
+                                          class="px-6 py-3 text-center text-xs font-medium text-white uppercase tracking-wider">
+                                          عدد الاوراق المنجزة</th>
+                                        <th scope="col"
+                                          class="px-6 py-3 text-center text-xs font-medium text-white uppercase tracking-wider">
+                                          النقص</th>
+                                        <th scope="col"
+                                          class="px-6 py-3 text-center text-xs font-medium text-white uppercase tracking-wider">
+                                          المزيف</th>
+                                        <th scope="col"
+                                          class="px-6 py-3 text-center text-xs font-medium text-white uppercase tracking-wider">
+                                          ظهور فئات محلية</th>
+                                        <th scope="col"
+                                          class="px-6 py-3 text-center text-xs font-medium text-white uppercase tracking-wider">
+                                          ظهور فئات اجنبية</th>
+                                        <th scope="col"
+                                          class="px-6 py-3 text-center text-xs font-medium text-white uppercase tracking-wider">
+                                          الزيادة </th>
+                                        <th scope="col"
+                                          class="px-6 py-3 text-center text-xs font-medium text-white uppercase tracking-wider">
+                                          المرفوض </th>
+                                        <th scope="col"
+                                          class="px-6 py-3 text-center text-xs font-medium text-white uppercase tracking-wider">
+                                          المثقب </th>
+                                        <th scope="col"
+                                          class="px-6 py-3 text-center text-xs font-medium text-white uppercase tracking-wider">
+                                          المدفون </th>
+                                        <th scope="col"
+                                          class="px-6 py-3 text-center text-xs font-medium text-white uppercase tracking-wider">
+                                          اسم امين الصندوق </th>
+                                      </tr>
+                                    </thead>
+                                    <tbody>
+                                      <tr class="bg-white">
+                                        <td class="px-6 py-4 whitespace-nowrap text-xs font-medium text-gray-900">01
+                                        </td>
+                                        <td class="px-6 py-4 text-xs text-gray-500 ">Lorem ipsum dolor sit amet.</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-xs text-gray-500">
+                                          99,60,000</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-xs text-gray-500">999</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-right text-xs font-medium">
+                                          <a href="#" class="text-indigo-600 hover:text-indigo-900">999999</a>
+                                        </td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-right text-xs font-medium">
+                                          <a href="#" class="text-indigo-600 hover:text-indigo-900">999999</a>
+                                        </td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-xs font-medium text-gray-900">01
+                                        </td>
+                                        <td class="px-6 py-4 text-xs text-gray-500 ">Lorem ipsum dolor sit amet.</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-xs text-gray-500">
+                                          99,60,000</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-xs text-gray-500">999</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-right text-xs font-medium">
+                                          <a href="#" class="text-indigo-600 hover:text-indigo-900">999999</a>
+                                        </td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-right text-xs font-medium">
+                                          <a href="#" class="text-indigo-600 hover:text-indigo-900">999999</a>
+                                        </td>
+                                      </tr>
+
+                                    </tbody>
+                                  </table>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="flex justify-end mt-3">
+                        <button class="btn btn-success btn-block" (click)="openPDF()">تحميل الكشف</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </ng-template>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
     </div>
   </div>
 </div>
-</div>
-
-
